frontend/tests/cases/positive/ExtNatPredicate.gr
foo : forall x : Ext Nat . {x == Inf} => Int [x] -> Int
foo [x] = foo [x]