frontend/tests/cases/negative/graded/universal.gr
foo : ∀ {n : Nat} . Int [n] → Int
foo [x] = x + x
